# aftab

./: .gitignore  README.md  pyproject.toml
aftab/: Aftab.py  Agent.py  __init__.py  common.py  constants.py  helpers.py
aftab/agents/: AlphaAgent.py  BaseAgent.py  BetaAgent.py  DeltaAgent.py  DuellingAgent.py  EpsilonAgent.py  EtaAgent.py  FQFAgent.py  GammaAgent.py  PQNAgent.py  README.md  ThetaAgent.py  ZetaAgent.py  __init__.py
aftab/encoders/: AlphaEncoder.py  BetaEncoder.py  CoordinatedGammaEncoder.py  DQNEncoder.py  DeltaEncoder.py  EpsilonEncoder.py  EtaEncoder.py  GammaEncoder.py  GammaHadamaxEncoder.py  HadamaxGammaEncoder.py  HadamaxGammaEncoderV1.py  HadamaxGammaEncoderV2.py  HadamaxLayer.py  HadamaxNatureDQNEncoder.py  HadamaxThriftyEncoder.py  IotaEncoder.py  NatureDQNEncoder.py  OmegaEncoder.py  PsiEncoder.py  ResidualGammaEncoder.py  SimpleAttentionGammaEncoder.py  SimpleViTEncoder.py  ThetaEncoder.py  ThriftyEncoder.py  ZetaEncoder.py  __init__.py
aftab/exceptions/: InvalidEncoderIdentifier.py  __init__.py
aftab/functions/: __init__.py  flush.py  lambda_returns.py  lambda_returns_quantile.py  n_step_returns.py  positional_embedding_sincos_2d.py  random_shifts.py
aftab/maps/: AftabEncoderMap.py  __init__.py  encoders.py  networks.py
aftab/mixins/: AccelerationDeviceMixin.py  ActionsMixin.py  BatchMixin.py  CPUCountMixin.py  CPUMixin.py  CategoricalTrainMixin.py  CheckFramesMixin.py  CompilationMixin.py  CompileNetworkMixin.py  (+18 more)
docs/: index.html
examples/: run.py  run_experiments.py
scripts/: install_micromamba.sh  setup_environment.sh
(+33 files in other folders)
